--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "StudentManagementSystemDefaultConnection": "Data Source=LAPTOP-3O58F4FN;database=studentManagement;trusted_connection=yes;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
