--- a/src/StudentManagementSystem/src/StudentManagementSystem.Business/StudentManagementSystem.Business.csproj
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.Business/StudentManagementSystem.Business.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudentManagementSystem.Data\StudentManagementSystem.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Example.EFCoreShared">
+      <HintPath>..\..\..\Example.AllShareds\Example.EFCoreShared\bin\Release\netstandard2.0\Example.EFCoreShared.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
