--- a/src/StudentManagementSystem/test/StudentManagementNUnitTest/StudentManagementNUnitTest.csproj
+++ b/src/StudentManagementSystem/test/StudentManagementNUnitTest/StudentManagementNUnitTest.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\StudentManagementSystem.Business\StudentManagementSystem.Business.csproj" />
     <ProjectReference Include="..\..\src\StudentManagementSystem.Data\StudentManagementSystem.Data.csproj" />
   </ItemGroup>
 
