--- a/src/StudentManagementSystem/src/StudentManagementSystem.Business/StudentManagementSystem.Business.csproj
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.Business/StudentManagementSystem.Business.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Example.CoreShareds">
+      <HintPath>..\..\..\Example.AllShareds\Example.CoreShareds\bin\Release\netstandard2.0\Example.CoreShareds.dll</HintPath>
+    </Reference>
     <Reference Include="Example.EFCoreShared">
       <HintPath>..\..\..\Example.AllShareds\Example.EFCoreShared\bin\Release\netstandard2.0\Example.EFCoreShared.dll</HintPath>
     </Reference>
