--- a/src/StudentManagementSystem/src/StudentManagementSystem.Data/StudentManagementSystem.Data.csproj
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.Data/StudentManagementSystem.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,14 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.GenericRepository" Version="1.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="EFCore.GenericRepository">
-      <HintPath>..\..\..\..\..\EFCoreGenericRepository\src\EFCore.GenericRepository\bin\Release\netstandard2.0\EFCore.GenericRepository.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
