--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
@@ -1,11 +1,17 @@
 {
   "ConnectionStrings": {
-    "StudentManagementSystemDefaultConnection": "Data Source=LAPTOP-3O58F4FN;database=studentManagement;trusted_connection=yes;"
+    "StudentManagementSystemDefaultConnection": "Data Source=LAPTOP-3O58F4FN;database=studentManagement;trusted_connection=yes;",
+    "EventDbConnectionString": "Data Source=LAPTOP-3O58F4FN;database=eventDB;trusted_connection=yes;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceInformations": {
+    "PopulationInformationService": {
+      "BaseUrl": "localhost"
+    }
+  }
 }
