--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "ServiceInformations": {
     "PopulationInformationService": {
-      "BaseUrl": "localhost"
+      "BaseUrl": "https://localhost:44308"
     }
   }
 }
