namespaces fix, CourseScoreManagement is under development

--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/appsettings.json
@@ -12,6 +12,9 @@
   "ServiceInformations": {
     "PopulationInformationService": {
       "BaseUrl": "https://localhost:44308"
+    },
+    "CourseManagementService": {
+      "BaseUrl": "https://localhost:5001"
     }
   }
 }
