--- a/src/CourseManagementService/CMS.Api/CMS.Api.csproj
+++ b/src/CourseManagementService/CMS.Api/CMS.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
@@ -26,6 +27,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="EventManager.Core">
+      <HintPath>..\..\DllReferences\EventManager.Core.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.DefaultManager">
+      <HintPath>..\..\DllReferences\EventManager.DefaultManager.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.EventChecker">
+      <HintPath>..\..\DllReferences\EventManager.EventChecker.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.EventChecker.SQL">
+      <HintPath>..\..\DllReferences\EventManager.EventChecker.SQL.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.Shared">
+      <HintPath>..\..\DllReferences\EventManager.Shared.dll</HintPath>
+    </Reference>
     <Reference Include="Example.CoreShareds">
       <HintPath>..\..\Example.AllShareds\Example.CoreShareds\bin\Release\netstandard2.0\Example.CoreShareds.dll</HintPath>
     </Reference>
