--- a/src/CourseManagementService/CMS.BLL/CMS.BLL.csproj
+++ b/src/CourseManagementService/CMS.BLL/CMS.BLL.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.GenericRepository" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -13,6 +15,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="EventManager.Core">
+      <HintPath>..\..\DllReferences\EventManager.Core.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.DefaultManager">
+      <HintPath>..\..\DllReferences\EventManager.DefaultManager.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.EventChecker">
+      <HintPath>..\..\DllReferences\EventManager.EventChecker.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.EventChecker.SQL">
+      <HintPath>..\..\DllReferences\EventManager.EventChecker.SQL.dll</HintPath>
+    </Reference>
+
+    <Reference Include="EventManager.Shared">
+      <HintPath>..\..\DllReferences\EventManager.Shared.dll</HintPath>
+    </Reference>
     <Reference Include="Example.CoreShareds">
       <HintPath>..\..\Example.AllShareds\Example.CoreShareds\bin\Release\netstandard2.0\Example.CoreShareds.dll</HintPath>
     </Reference>
