--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/StudentManagementSystem.WebUI.csproj
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/StudentManagementSystem.WebUI.csproj
@@ -8,6 +8,7 @@
 	
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+    <LangVersion>default</LangVersion>
 
   </PropertyGroup>
 
