--- a/src/PopulationService/PopulationService.BLL/PopulationService.BLL.csproj
+++ b/src/PopulationService/PopulationService.BLL/PopulationService.BLL.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="8.0.0" />
-    <PackageReference Include="EFCore.GenericRepository" Version="1.0.5" />
+    <PackageReference Include="AutoMapper" Version="8.1.0" />
+    <PackageReference Include="EFCore.GenericRepository" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
