--- a/src/CourseManagementService/CMS.BLL/CMS.BLL.csproj
+++ b/src/CourseManagementService/CMS.BLL/CMS.BLL.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EFCore.GenericRepository" Version="1.1.1" />
+    <PackageReference Include="EFCore.GenericRepository" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
   </ItemGroup>
